--- a/Contest/139/0-Note139.md
+++ b/Contest/139/0-Note139.md
@@ -2,23 +2,46 @@
 0，  
 **【直接AC】**
 # 2 - Flip Colums For Maximum Number Of EqualRows
-0  
+转换题  
 **【直接AC】**
 
-# 3 -  Previous Permutation With One Swap
-理解题，看懂题目就OK
-# 错误- 用数组表示数字的，左右进位问题
-## Test Case Failures
+# 3 - Adding Two Negabinary Numbers
+规则题
+## 错误： 
+用数组表示数字的，左右进位问题
+## Failures
     [1] [1,1]   
-导致两个[0,0]
-# 4 - Distant Barcodes
-标记一下，制造重复元素不相邻数列的一种方法
-## Test Case Failures
+导致两个[0,0]，这是一个很常见的错误，忽略的最高位为0
 
-# Other Tips
+# 4 - Number of Submatices That Sum to Target
+子矩阵的遍历
+## Failures
+    matrix： [[0,1,0],[1,1,1],[0,1,0]]  
+    target=0  
+for循环的下标起始点弄错了，因为i=0这种从0开始的太熟练了  
 
-# Bug Log
-## 对越界警觉感
+    300X300的一个大矩阵
+直接超时了。一个是我存在侥幸心理，其实估一下是有超时的感觉的。
+另一个是我的偷懒的算法，确实有很多冗余的运算。需要重新思考遍历的方式。
 
-#STL
+# Lession
+## 下标定律
+取k个元素时，从i 到 i+k-1, 其中i+k-1是最后一个元素的下标   
 
+    for(int index=i; index< i+k; index++)  
+
+
+## 使用数组表示数字时  
+1-不要出现最高位为0的情况  
+2-左右哪边是最高位不要弄反了
+
+## 子矩阵的遍历
+
+### 遍历法1：  
+枚举矩阵的size：n*m  
+然后对n * m进行移动遍历
+
+### 遍历法2：
+遍历矩阵的列数or行数 x，  
+对于一个固定的行数x，在遍历具体行所在的位置  
+位置确定后，在遍历列数（可以看做遍历一个序列的起始点，类似于交换排序的做法j=i;j< size ;j++）
