Solution: Insufficient Nodes in Root to Leaf Paths

--- a/Contest/140/0-Note140.md
+++ b/Contest/140/0-Note140.md
@@ -9,9 +9,14 @@
 ## Failures:
 **【直接AC】**
 # 3 - Insufficient Nodes in Root to Leaf Paths
-## Key:
-树递归
-## Failures
+## Key: 树递归
+
+这就是一道比较直白的递归，递归遍历路径到叶子节点判断结果，然后回传父级，父级根据子节点的情况再判断
+## 对递归以及树的遍历流不熟悉：  
+我原本的写法，就是一次递归下去，把结果存在map上，然后再遍历一遍过来删节点。 之所以遍历2次，是我忘了递归还有回传再次处理的机会。    
+（另外，map的key必须是可排序的，人家内部实现是红黑树啊！所以如果是struct，class之类的，要重载>才能用）
+
+人家先递归调用，这里有一次信息传递的机会；然后就是一步步回传返回值，这里又有一次信息传递的机会，用于父级来处理。
 
 # 4 - Smallest Subsequence of Distinct Characters
 ## Key:
