--- a/Contest/140/0-Note140.md
+++ b/Contest/140/0-Note140.md
@@ -19,12 +19,11 @@
 人家先递归调用，这里有一次信息传递的机会；然后就是一步步回传返回值，这里又有一次信息传递的机会，用于父级来处理。
 
 # 4 - Smallest Subsequence of Distinct Characters
-## Key:
-找最优解，过程策略，逐步调整
-## Failures:
-    答案错误1
-test case漏考虑，对于一个字母x，不能一味的往后退，如在它后面的字母y只能排在很前面的话，为了使得最大，这个字母x得想办法排在字母y前面。  
-所以在做字母x的决策时，不光要考虑前面的字母的状态，还要考虑后面字母的状态。
+## Key:最优解，贪心
+## **如何面对复杂逻辑？**
+这道题我的解法逻辑很复杂，写这种短码一般很少用子函数，直接好几层for和分支，频繁出错，调了好久才对。
+## map和set ， hash
+我看了，R99的代码和我的思路是一模一样的，但我的runtime要高一截，这是为什么？？
 
 # Lession
 ## 代码经验1
