--- a/Contest/140/0-Note140.md
+++ b/Contest/140/0-Note140.md
@@ -4,10 +4,16 @@
 ## Failures：
 **【直接AC】**  
 # 2 - Letter Tile Possibilities
-## Key：  
-情况分类树 
-## Failures:
-**【直接AC】**
+## Key：  情况分类树 
+## 情况分类树：通过推演解决排列组合问题
+这道题很明显，是可以用排列组合直接推数学公式的。但是，在程序思维上，我们是可以**通过构建“分类树”，来对所有可能性进行枚举**。  
+其好处是，代码和实现十分简单，同时正确性能够得到保障，如果推数学公式，很容易搞不好就犯错（尤其是这种排列组合，你懂的）
+  
+但是，记住要看一下题目给定的数值范围：  
+**一定要估一下会不会超时or栈溢出！！**   
+**一定要估一下会不会超时or栈溢出！！**  
+**一定要估一下会不会超时or栈溢出！！*
+
 # 3 - Insufficient Nodes in Root to Leaf Paths
 ## Key: 树递归
 
@@ -35,16 +41,7 @@
 1-判断调节有没有写错  
 2-下标++之类的有没有漏写  
 3-i，j，k之类的有没有搞混了
-## 【第2题】情况分类树：通过推演解决排列组合问题
-这道题很明显，是可以用排列组合直接推数学公式的。但是，在程序思维上，我们是可以**通过构建“分类树”，来对所有可能性进行枚举**。  
-其好处是，代码和实现十分简单，同时正确性能够得到保障，如果推数学公式，很容易搞不好就犯错（尤其是这种排列组合，你懂的）
-  
-但是，记住要看一下题目给定的数值范围：  
-**一定要估一下会不会超时or栈溢出！！**   
-**一定要估一下会不会超时or栈溢出！！**  
-**一定要估一下会不会超时or栈溢出！！** 
 
-## 【第4题】思路分析
-这是要在一堆次
-## 技巧-every->极值判断
-## STL：struct/pointer 作map的key
+## STL: set 与 unordered_set
+前者基于红黑树，后者基于哈希表。
+
